fix vertical deck alignment

--- a/src/styles.css
+++ b/src/styles.css
@@ -176,6 +176,7 @@ option {
 .unit_table_cell {
 	background-color: #00000022;
 	text-align: center;
+	text-shadow: 2px 2px 1px black;
 }
 
 .unit_table_cell_alt {
@@ -431,7 +432,7 @@ sup {
 #unit_view-h {
 	overflow: auto;
 	background-image: 'images/a1.png';
-	background-color: #cb8e8e88;
+	background-color: #411f1f7c;
 	margin: 3px;
 	right: 50%;
 	left: 0px;
@@ -441,7 +442,7 @@ sup {
 
 #deck_view-h {
 	overflow: auto;
-	background-color: #cbc48e88;
+	background-color: rgba(212, 201, 45, 0.233);
 	margin: 3px;
 	left: 50%;
 	top: 0px;
@@ -450,7 +451,7 @@ sup {
 }
 
 #stats_view-h {
-	background-color: #8ecb9988;
+	background-color: #09ff003d;
 	margin: 3px;
 	left: 50%;
 	top: 50%;
@@ -461,7 +462,7 @@ sup {
 
 #unit_view-v {
 	overflow: auto;
-	background-color: #cb8e8e88;
+	background-color: #411f1f7c;
 	margin: 0;
 	left: 0;
 	right: 0;
@@ -477,7 +478,7 @@ sup {
 
 #deck_view-v {
 	overflow: auto;
-	background-color: #cbc48e88;
+	background-color: rgba(212, 201, 45, 0.233);
 	margin: 0;
 	height: 29.5%;
 	left: 0;
@@ -491,7 +492,7 @@ sup {
 }
 
 #stats_view-v {
-	background-color: #8ecb9988;
+	background-color: #0b5a0967;
 	margin: 0;
 	margin: 0;
 	height: 30%;
@@ -538,6 +539,9 @@ sup {
 }
 
 .deckContainer {
+	display: flex;
+	flex-direction: column;
+	justify-content: space-evenly;
 	width: 40%;
 	height: 100%;
 	border-color: rgb(2, 1, 90);
@@ -583,7 +587,8 @@ sup {
 	font-weight: 350;
 	font-size: 16px;
 	line-height: 80%;
-	width: 100%;
+	width: 98%;
+	height: 50%;
 	display: flex;
 	flex-direction: row;
 	flex-wrap: wrap;
@@ -598,13 +603,13 @@ sup {
 	display: flex;
 	flex-direction: row;
 	width: 20%;
-	height: 0%;
+	height: 10%;
 	padding: 4 0 4 0;
 	align-items: center;
 	justify-content: center;
-	border: none;
+	border: dashed;
 	border-width: 1px;
-	border-color: green;
+	border-color: rgba(255, 255, 255, 0.171);
 	background-color: rgba(0, 0, 0, 0.308);
 }
 
@@ -612,7 +617,7 @@ sup {
 	justify-content: left;
 	width: 100%;
 	line-height: 100%;
-	height: 100%;
+	height: 15%;
 }
 
 .resourceStatDiv {
